Kubernetes.Deploy/test/ingress-notsecure.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: certmanager-app-ingress
spec:
  rules:
    - host: webapi.sakaryaprojwebapi.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: certmanager-app-service
                port:
                  number: 80
